final_work/src/parser/parser.output
Terminals unused in grammar

    L_BRACE
    R_BRACE
    SQRT


State 225 conflicts: 1 shift/reduce
State 230 conflicts: 2 reduce/reduce
State 349 conflicts: 1 shift/reduce


Grammar

    0 $accept: pascal_program $end

    1 pascal_program: PROGRAM IDENTIFIER program_headingopt SEMICOLON block DOT

    2 program_headingopt: L_PAREN identifier_list R_PAREN
    3                   | empty

    4 identifier_list: identifier
    5                | identifier_list COMMA identifier

    6 block: block1
    7      | label_declaration SEMICOLON block1

    8 block1: block2
    9       | constant_declaration SEMICOLON block2

   10 block2: block3
   11       | type_declaration SEMICOLON block3

   12 block3: block4
   13       | variable_declaration SEMICOLON block4

   14 block4: block5
   15       | proc_and_func_declaration SEMICOLON block5

   16 block5: BEGIN_TOK statement_list END

   17 label_declaration: LABEL unsigned_integer
   18                  | label_declaration COMMA unsigned_integer

   19 constant_declaration: CONST constid EQ constant
   20                     | constant_declaration SEMICOLON constid EQ constant

   21 type_declaration: TYPE typeid EQ type
   22                 | type_declaration SEMICOLON typeid EQ type

   23 variable_declaration: VAR variableid_list COLON type
   24                     | variable_declaration SEMICOLON variableid_list COLON type

   25 variableid_list: identifier
   26                | variableid_list COMMA identifier

   27 constant: integer_literal
   28         | real_literal
   29         | string_literal
   30         | char_literal
   31         | boolean_literal
   32         | constid
   33         | PLUS constid
   34         | MINUS constid

   35 type: simple_type
   36     | structured_type
   37     | CARET typeid

   38 simple_type: L_PAREN identifier_list R_PAREN
   39            | constant DOTDOT constant
   40            | typeid

   41 structured_type: unpacked_structured_type
   42                | PACKED unpacked_structured_type

   43 unpacked_structured_type: ARRAY L_BRACKET index_list R_BRACKET OF type
   44                         | RECORD field_list END
   45                         | SET OF simple_type
   46                         | FILE_TOK
   47                         | FILE_TOK OF type

   48 index_list: simple_type
   49           | index_list COMMA simple_type

   50 field_list: empty
   51           | field_list_content optional_semicolon

   52 field_list_content: fixed_part
   53                   | variant_part
   54                   | fixed_part SEMICOLON variant_part

   55 optional_semicolon: SEMICOLON
   56                   | empty

   57 fixed_part: record_field
   58           | fixed_part SEMICOLON record_field

   59 record_field: empty
   60             | fieldid_list COLON type

   61 fieldid_list: fieldid
   62             | fieldid_list COMMA fieldid

   63 variant_part: CASE tag_field OF variant_list

   64 tag_field: typeid
   65          | identifier COLON typeid

   66 variant_list: variant
   67             | variant_list SEMICOLON variant

   68 variant: empty
   69        | case_label_list COLON L_PAREN field_list R_PAREN

   70 proc_and_func_declaration: proc_or_func
   71                          | proc_and_func_declaration SEMICOLON proc_or_func

   72 proc_or_func: PROCEDURE procid parameters SEMICOLON block_or_forward
   73             | FUNCTION funcid parameters COLON typeid SEMICOLON block_or_forward

   74 block_or_forward: block
   75                 | FORWARD

   76 parameters: L_PAREN formal_parameter_list R_PAREN

   77 formal_parameter_list: formal_parameter_section
   78                      | formal_parameter_list SEMICOLON formal_parameter_section

   79 formal_parameter_section: parameterid_list COLON typeid
   80                         | VAR parameterid_list COLON typeid
   81                         | PROCEDURE identifier parameters
   82                         | FUNCTION identifier parameters COLON typeid

   83 parameterid_list: identifier
   84                 | parameterid_list COMMA identifier

   85 statement_list: statement
   86               | statement_list SEMICOLON optional_statement

   87 optional_statement: statement
   88                   | empty

   89 statement: variable ASSIGN expression
   90          | BEGIN_TOK statement_list END
   91          | IF expression THEN statement
   92          | IF expression THEN statement ELSE statement
   93          | CASE expression OF case_list END
   94          | CASE expression OF case_list SEMICOLON case_else END
   95          | WHILE expression DO statement
   96          | REPEAT statement_list UNTIL expression
   97          | FOR varid ASSIGN for_list DO statement
   98          | procid
   99          | procid L_PAREN optional_expression_list R_PAREN
  100          | GOTO label
  101          | WITH record_variable_list DO statement
  102          | label COLON statement

  103 variable: varid
  104         | variable L_BRACKET subscript_list R_BRACKET
  105         | variable DOT fieldid
  106         | variable CARET

  107 subscript_list: expression
  108               | subscript_list COMMA expression

  109 case_list: case_item
  110          | case_list SEMICOLON case_item

  111 case_item: case_label_list COLON statement

  112 case_label_list: case_label
  113                | case_label_list COMMA case_label

  114 case_label: constant
  115           | constant DOTDOT constant

  116 case_else: ELSE statement SEMICOLON

  117 for_list: expression TO expression
  118         | expression DOWNTO expression

  119 optional_expression_list: empty
  120                         | expression_list

  121 expression_list: expression
  122                | expression_list COMMA expression

  123 label: unsigned_integer

  124 record_variable_list: variable
  125                     | record_variable_list COMMA variable

  126 expression: expression LT additive_expression
  127           | expression LTE additive_expression
  128           | expression EQ additive_expression
  129           | expression NEQ additive_expression
  130           | expression GTE additive_expression
  131           | expression GT additive_expression
  132           | additive_expression

  133 additive_expression: additive_expression PLUS multiplicative_expression
  134                    | additive_expression MINUS multiplicative_expression
  135                    | additive_expression OR multiplicative_expression
  136                    | multiplicative_expression

  137 multiplicative_expression: multiplicative_expression TIMES unary_expression
  138                          | multiplicative_expression DIVIDE unary_expression
  139                          | multiplicative_expression DIV unary_expression
  140                          | multiplicative_expression MOD unary_expression
  141                          | multiplicative_expression AND unary_expression
  142                          | multiplicative_expression IN unary_expression
  143                          | unary_expression

  144 unary_expression: PLUS unary_expression
  145                 | MINUS unary_expression
  146                 | NOT unary_expression
  147                 | primary_expression

  148 primary_expression: variable
  149                   | unsigned_integer
  150                   | unsigned_real
  151                   | string_literal
  152                   | char_literal
  153                   | NIL
  154                   | funcid L_PAREN optional_expression_list R_PAREN
  155                   | L_BRACKET element_list R_BRACKET
  156                   | L_PAREN expression R_PAREN

  157 element_list: empty
  158             | element_list_non_empty

  159 element_list_non_empty: element
  160                       | element_list_non_empty COMMA element

  161 element: expression
  162        | expression DOTDOT expression

  163 constid: identifier

  164 typeid: CHAR
  165       | BOOLEAN
  166       | INTEGER
  167       | REAL
  168       | STRING
  169       | identifier

  170 funcid: identifier
  171       | CHR

  172 procid: identifier
  173       | WRITE
  174       | WRITELN
  175       | READ
  176       | READLN

  177 fieldid: identifier

  178 varid: identifier

  179 identifier: IDENTIFIER

  180 unsigned_integer: INTEGER_LITERAL

  181 unsigned_real: REAL_LITERAL

  182 integer_literal: INTEGER_LITERAL

  183 real_literal: REAL_LITERAL

  184 string_literal: STRING_LITERAL

  185 char_literal: CHAR_LITERAL

  186 boolean_literal: BOOLEAN_LITERAL

  187 empty: ε


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    PROGRAM (258) 1
    VAR (259) 23 80
    CONST (260) 19
    TYPE (261) 21
    LABEL (262) 17
    PROCEDURE (263) 72 81
    FUNCTION (264) 73 82
    BEGIN_TOK (265) 16 90
    END (266) 16 44 90 93 94
    IF (267) 91 92
    THEN (268) 91 92
    ELSE (269) 92 116
    NIL (270) 153
    WITH (271) 101
    FORWARD (272) 75
    PACKED (273) 42
    WHILE (274) 95
    DO (275) 95 97 101
    FOR (276) 97
    TO (277) 117
    DOWNTO (278) 118
    REPEAT (279) 96
    UNTIL (280) 96
    CASE (281) 63 93 94
    OF (282) 43 45 47 63 93 94
    GOTO (283) 100
    INTEGER (284) 166
    REAL (285) 167
    BOOLEAN (286) 165
    CHAR (287) 164
    ARRAY (288) 43
    RECORD (289) 44
    SET (290) 45
    FILE_TOK (291) 46 47
    STRING (292) 168
    READ (293) 175
    WRITE (294) 173
    READLN (295) 176
    WRITELN (296) 174
    CHR (297) 171
    GT (298) 131
    GTE (299) 130
    LT (300) 126
    LTE (301) 127
    NEQ (302) 129
    EQ (303) 19 20 21 22 128
    AND (304) 141
    OR (305) 135
    NOT (306) 146
    PLUS (307) 33 133 144
    MINUS (308) 34 134 145
    TIMES (309) 137
    DIVIDE (310) 138
    DIV (311) 139
    MOD (312) 140
    DOT (313) 1 105
    DOTDOT (314) 39 115 162
    CARET (315) 37 106
    ASSIGN (316) 89 97
    SEMICOLON (317) 1 7 9 11 13 15 20 22 24 54 55 58 67 71 72 73 78 86 94 110 116
    COMMA (318) 5 18 26 49 62 84 108 113 122 125 160
    COLON (319) 23 24 60 65 69 73 79 80 82 102 111
    L_PAREN (320) 2 38 69 76 99 154 156
    R_PAREN (321) 2 38 69 76 99 154 156
    L_BRACE (322)
    R_BRACE (323)
    L_BRACKET (324) 43 104 155
    R_BRACKET (325) 43 104 155
    CHAR_LITERAL <character> (326) 185
    INTEGER_LITERAL <integer> (327) 180 182
    REAL_LITERAL <number> (328) 181 183
    BOOLEAN_LITERAL <boolean> (329) 186
    IDENTIFIER <string> (330) 1 179
    STRING_LITERAL <string> (331) 184
    SQRT (332)
    NEG (333)
    IN (334) 142
    LOWER_THAN_ELSE (335)


Nonterminals, with rules where they appear

    $accept (81)
        on left: 0
    pascal_program <node> (82)
        on left: 1
        on right: 0
    program_headingopt <node> (83)
        on left: 2 3
        on right: 1
    identifier_list <node> (84)
        on left: 4 5
        on right: 2 5 38
    block <node> (85)
        on left: 6 7
        on right: 1 74
    block1 <node> (86)
        on left: 8 9
        on right: 6 7
    block2 <node> (87)
        on left: 10 11
        on right: 8 9
    block3 <node> (88)
        on left: 12 13
        on right: 10 11
    block4 <node> (89)
        on left: 14 15
        on right: 12 13
    block5 <node> (90)
        on left: 16
        on right: 14 15
    label_declaration <node> (91)
        on left: 17 18
        on right: 7 18
    constant_declaration <node> (92)
        on left: 19 20
        on right: 9 20
    type_declaration <node> (93)
        on left: 21 22
        on right: 11 22
    variable_declaration <node> (94)
        on left: 23 24
        on right: 13 24
    variableid_list <node> (95)
        on left: 25 26
        on right: 23 24 26
    constant <node> (96)
        on left: 27 28 29 30 31 32 33 34
        on right: 19 20 39 114 115
    type <node> (97)
        on left: 35 36 37
        on right: 21 22 23 24 43 47 60
    simple_type <node> (98)
        on left: 38 39 40
        on right: 35 45 48 49
    structured_type <node> (99)
        on left: 41 42
        on right: 36
    unpacked_structured_type <node> (100)
        on left: 43 44 45 46 47
        on right: 41 42
    index_list <node> (101)
        on left: 48 49
        on right: 43 49
    field_list <node> (102)
        on left: 50 51
        on right: 44 69
    field_list_content <node> (103)
        on left: 52 53 54
        on right: 51
    optional_semicolon <node> (104)
        on left: 55 56
        on right: 51
    fixed_part <node> (105)
        on left: 57 58
        on right: 52 54 58
    record_field <node> (106)
        on left: 59 60
        on right: 57 58
    fieldid_list <node> (107)
        on left: 61 62
        on right: 60 62
    variant_part <node> (108)
        on left: 63
        on right: 53 54
    tag_field <node> (109)
        on left: 64 65
        on right: 63
    variant_list <node> (110)
        on left: 66 67
        on right: 63 67
    variant <node> (111)
        on left: 68 69
        on right: 66 67
    proc_and_func_declaration <node> (112)
        on left: 70 71
        on right: 15 71
    proc_or_func <node> (113)
        on left: 72 73
        on right: 70 71
    block_or_forward <node> (114)
        on left: 74 75
        on right: 72 73
    parameters <node> (115)
        on left: 76
        on right: 72 73 81 82
    formal_parameter_list <node> (116)
        on left: 77 78
        on right: 76 78
    formal_parameter_section <node> (117)
        on left: 79 80 81 82
        on right: 77 78
    parameterid_list <node> (118)
        on left: 83 84
        on right: 79 80 84
    statement_list <node> (119)
        on left: 85 86
        on right: 16 86 90 96
    optional_statement <node> (120)
        on left: 87 88
        on right: 86
    statement <node> (121)
        on left: 89 90 91 92 93 94 95 96 97 98 99 100 101 102
        on right: 85 87 91 92 95 97 101 102 111 116
    variable <node> (122)
        on left: 103 104 105 106
        on right: 89 104 105 106 124 125 148
    subscript_list <node> (123)
        on left: 107 108
        on right: 104 108
    case_list <node> (124)
        on left: 109 110
        on right: 93 94 110
    case_item <node> (125)
        on left: 111
        on right: 109 110
    case_label_list <node> (126)
        on left: 112 113
        on right: 69 111 113
    case_label <node> (127)
        on left: 114 115
        on right: 112 113
    case_else <node> (128)
        on left: 116
        on right: 94
    for_list <node> (129)
        on left: 117 118
        on right: 97
    optional_expression_list <node> (130)
        on left: 119 120
        on right: 99 154
    expression_list <node> (131)
        on left: 121 122
        on right: 120 122
    label <node> (132)
        on left: 123
        on right: 100 102
    record_variable_list <node> (133)
        on left: 124 125
        on right: 101 125
    expression <node> (134)
        on left: 126 127 128 129 130 131 132
        on right: 89 91 92 93 94 95 96 107 108 117 118 121 122 126 127 128 129 130 131 156 161 162
    additive_expression <node> (135)
        on left: 133 134 135 136
        on right: 126 127 128 129 130 131 132 133 134 135
    multiplicative_expression <node> (136)
        on left: 137 138 139 140 141 142 143
        on right: 133 134 135 136 137 138 139 140 141 142
    unary_expression <node> (137)
        on left: 144 145 146 147
        on right: 137 138 139 140 141 142 143 144 145 146
    primary_expression <node> (138)
        on left: 148 149 150 151 152 153 154 155 156
        on right: 147
    element_list <node> (139)
        on left: 157 158
        on right: 155
    element_list_non_empty <node> (140)
        on left: 159 160
        on right: 158 160
    element <node> (141)
        on left: 161 162
        on right: 159 160
    constid <node> (142)
        on left: 163
        on right: 19 20 32 33 34
    typeid <node> (143)
        on left: 164 165 166 167 168 169
        on right: 21 22 37 40 64 65 73 79 80 82
    funcid <node> (144)
        on left: 170 171
        on right: 73 154
    procid <node> (145)
        on left: 172 173 174 175 176
        on right: 72 98 99
    fieldid <node> (146)
        on left: 177
        on right: 61 62 105
    varid <node> (147)
        on left: 178
        on right: 97 103
    identifier <node> (148)
        on left: 179
        on right: 4 5 25 26 65 81 82 83 84 163 169 170 172 177 178
    unsigned_integer <node> (149)
        on left: 180
        on right: 17 18 123 149
    unsigned_real <node> (150)
        on left: 181
        on right: 150
    integer_literal <node> (151)
        on left: 182
        on right: 27
    real_literal <node> (152)
        on left: 183
        on right: 28
    string_literal <node> (153)
        on left: 184
        on right: 29 151
    char_literal <node> (154)
        on left: 185
        on right: 30 152
    boolean_literal <node> (155)
        on left: 186
        on right: 31
    empty <node> (156)
        on left: 187
        on right: 3 50 56 59 68 88 119 157


State 0

    0 $accept: • pascal_program $end

    PROGRAM  shift, and go to state 1

    pascal_program  go to state 2


State 1

    1 pascal_program: PROGRAM • IDENTIFIER program_headingopt SEMICOLON block DOT

    IDENTIFIER  shift, and go to state 3


State 2

    0 $accept: pascal_program • $end

    $end  shift, and go to state 4


State 3

    1 pascal_program: PROGRAM IDENTIFIER • program_headingopt SEMICOLON block DOT

    L_PAREN  shift, and go to state 5

    $default  reduce using rule 187 (empty)

    program_headingopt  go to state 6
    empty               go to state 7


State 4

    0 $accept: pascal_program $end •

    $default  accept


State 5

    2 program_headingopt: L_PAREN • identifier_list R_PAREN

    IDENTIFIER  shift, and go to state 8

    identifier_list  go to state 9
    identifier       go to state 10


State 6

    1 pascal_program: PROGRAM IDENTIFIER program_headingopt • SEMICOLON block DOT

    SEMICOLON  shift, and go to state 11


State 7

    3 program_headingopt: empty •

    $default  reduce using rule 3 (program_headingopt)


State 8

  179 identifier: IDENTIFIER •

    $default  reduce using rule 179 (identifier)


State 9

    2 program_headingopt: L_PAREN identifier_list • R_PAREN
    5 identifier_list: identifier_list • COMMA identifier

    COMMA    shift, and go to state 12
    R_PAREN  shift, and go to state 13


State 10

    4 identifier_list: identifier •

    $default  reduce using rule 4 (identifier_list)


State 11

    1 pascal_program: PROGRAM IDENTIFIER program_headingopt SEMICOLON • block DOT

    VAR        shift, and go to state 14
    CONST      shift, and go to state 15
    TYPE       shift, and go to state 16
    LABEL      shift, and go to state 17
    PROCEDURE  shift, and go to state 18
    FUNCTION   shift, and go to state 19
    BEGIN_TOK  shift, and go to state 20

    block                      go to state 21
    block1                     go to state 22
    block2                     go to state 23
    block3                     go to state 24
    block4                     go to state 25
    block5                     go to state 26
    label_declaration          go to state 27
    constant_declaration       go to state 28
    type_declaration           go to state 29
    variable_declaration       go to state 30
    proc_and_func_declaration  go to state 31
    proc_or_func               go to state 32


State 12

    5 identifier_list: identifier_list COMMA • identifier

    IDENTIFIER  shift, and go to state 8

    identifier  go to state 33


State 13

    2 program_headingopt: L_PAREN identifier_list R_PAREN •

    $default  reduce using rule 2 (program_headingopt)


State 14

   23 variable_declaration: VAR • variableid_list COLON type

    IDENTIFIER  shift, and go to state 8

    variableid_list  go to state 34
    identifier       go to state 35


State 15

   19 constant_declaration: CONST • constid EQ constant

    IDENTIFIER  shift, and go to state 8

    constid     go to state 36
    identifier  go to state 37


State 16

   21 type_declaration: TYPE • typeid EQ type

    INTEGER     shift, and go to state 38
    REAL        shift, and go to state 39
    BOOLEAN     shift, and go to state 40
    CHAR        shift, and go to state 41
    STRING      shift, and go to state 42
    IDENTIFIER  shift, and go to state 8

    typeid      go to state 43
    identifier  go to state 44


State 17

   17 label_declaration: LABEL • unsigned_integer

    INTEGER_LITERAL  shift, and go to state 45

    unsigned_integer  go to state 46


State 18

   72 proc_or_func: PROCEDURE • procid parameters SEMICOLON block_or_forward

    READ        shift, and go to state 47
    WRITE       shift, and go to state 48
    READLN      shift, and go to state 49
    WRITELN     shift, and go to state 50
    IDENTIFIER  shift, and go to state 8

    procid      go to state 51
    identifier  go to state 52


State 19

   73 proc_or_func: FUNCTION • funcid parameters COLON typeid SEMICOLON block_or_forward

    CHR         shift, and go to state 53
    IDENTIFIER  shift, and go to state 8

    funcid      go to state 54
    identifier  go to state 55


State 20

   16 block5: BEGIN_TOK • statement_list END

    BEGIN_TOK        shift, and go to state 56
    IF               shift, and go to state 57
    WITH             shift, and go to state 58
    WHILE            shift, and go to state 59
    FOR              shift, and go to state 60
    REPEAT           shift, and go to state 61
    CASE             shift, and go to state 62
    GOTO             shift, and go to state 63
    READ             shift, and go to state 47
    WRITE            shift, and go to state 48
    READLN           shift, and go to state 49
    WRITELN          shift, and go to state 50
    INTEGER_LITERAL  shift, and go to state 45
    IDENTIFIER       shift, and go to state 8

    statement_list    go to state 64
    statement         go to state 65
    variable          go to state 66
    label             go to state 67
    procid            go to state 68
    varid             go to state 69
    identifier        go to state 70
    unsigned_integer  go to state 71


State 21

    1 pascal_program: PROGRAM IDENTIFIER program_headingopt SEMICOLON block • DOT

    DOT  shift, and go to state 72


State 22

    6 block: block1 •

    $default  reduce using rule 6 (block)


State 23

    8 block1: block2 •

    $default  reduce using rule 8 (block1)


State 24

   10 block2: block3 •

    $default  reduce using rule 10 (block2)


State 25

   12 block3: block4 •

    $default  reduce using rule 12 (block3)


State 26

   14 block4: block5 •

    $default  reduce using rule 14 (block4)


State 27

    7 block: label_declaration • SEMICOLON block1
   18 label_declaration: label_declaration • COMMA unsigned_integer

    SEMICOLON  shift, and go to state 73
    COMMA      shift, and go to state 74


State 28

    9 block1: constant_declaration • SEMICOLON block2
   20 constant_declaration: constant_declaration • SEMICOLON constid EQ constant

    SEMICOLON  shift, and go to state 75


State 29

   11 block2: type_declaration • SEMICOLON block3
   22 type_declaration: type_declaration • SEMICOLON typeid EQ type

    SEMICOLON  shift, and go to state 76


State 30

   13 block3: variable_declaration • SEMICOLON block4
   24 variable_declaration: variable_declaration • SEMICOLON variableid_list COLON type

    SEMICOLON  shift, and go to state 77


State 31

   15 block4: proc_and_func_declaration • SEMICOLON block5
   71 proc_and_func_declaration: proc_and_func_declaration • SEMICOLON proc_or_func

    SEMICOLON  shift, and go to state 78


State 32

   70 proc_and_func_declaration: proc_or_func •

    $default  reduce using rule 70 (proc_and_func_declaration)


State 33

    5 identifier_list: identifier_list COMMA identifier •

    $default  reduce using rule 5 (identifier_list)


State 34

   23 variable_declaration: VAR variableid_list • COLON type
   26 variableid_list: variableid_list • COMMA identifier

    COMMA  shift, and go to state 79
    COLON  shift, and go to state 80


State 35

   25 variableid_list: identifier •

    $default  reduce using rule 25 (variableid_list)


State 36

   19 constant_declaration: CONST constid • EQ constant

    EQ  shift, and go to state 81


State 37

  163 constid: identifier •

    $default  reduce using rule 163 (constid)


State 38

  166 typeid: INTEGER •

    $default  reduce using rule 166 (typeid)


State 39

  167 typeid: REAL •

    $default  reduce using rule 167 (typeid)


State 40

  165 typeid: BOOLEAN •

    $default  reduce using rule 165 (typeid)


State 41

  164 typeid: CHAR •

    $default  reduce using rule 164 (typeid)


State 42

  168 typeid: STRING •

    $default  reduce using rule 168 (typeid)


State 43

   21 type_declaration: TYPE typeid • EQ type

    EQ  shift, and go to state 82


State 44

  169 typeid: identifier •

    $default  reduce using rule 169 (typeid)


State 45

  180 unsigned_integer: INTEGER_LITERAL •

    $default  reduce using rule 180 (unsigned_integer)


State 46

   17 label_declaration: LABEL unsigned_integer •

    $default  reduce using rule 17 (label_declaration)


State 47

  175 procid: READ •

    $default  reduce using rule 175 (procid)


State 48

  173 procid: WRITE •

    $default  reduce using rule 173 (procid)


State 49

  176 procid: READLN •

    $default  reduce using rule 176 (procid)


State 50

  174 procid: WRITELN •

    $default  reduce using rule 174 (procid)


State 51

   72 proc_or_func: PROCEDURE procid • parameters SEMICOLON block_or_forward

    L_PAREN  shift, and go to state 83

    parameters  go to state 84


State 52

  172 procid: identifier •

    $default  reduce using rule 172 (procid)


State 53

  171 funcid: CHR •

    $default  reduce using rule 171 (funcid)


State 54

   73 proc_or_func: FUNCTION funcid • parameters COLON typeid SEMICOLON block_or_forward

    L_PAREN  shift, and go to state 83

    parameters  go to state 85


State 55

  170 funcid: identifier •

    $default  reduce using rule 170 (funcid)


State 56

   90 statement: BEGIN_TOK • statement_list END

    BEGIN_TOK        shift, and go to state 56
    IF               shift, and go to state 57
    WITH             shift, and go to state 58
    WHILE            shift, and go to state 59
    FOR              shift, and go to state 60
    REPEAT           shift, and go to state 61
    CASE             shift, and go to state 62
    GOTO             shift, and go to state 63
    READ             shift, and go to state 47
    WRITE            shift, and go to state 48
    READLN           shift, and go to state 49
    WRITELN          shift, and go to state 50
    INTEGER_LITERAL  shift, and go to state 45
    IDENTIFIER       shift, and go to state 8

    statement_list    go to state 86
    statement         go to state 65
    variable          go to state 66
    label             go to state 67
    procid            go to state 68
    varid             go to state 69
    identifier        go to state 70
    unsigned_integer  go to state 71


State 57

   91 statement: IF • expression THEN statement
   92          | IF • expression THEN statement ELSE statement

    NIL              shift, and go to state 87
    CHR              shift, and go to state 53
    NOT              shift, and go to state 88
    PLUS             shift, and go to state 89
    MINUS            shift, and go to state 90
    L_PAREN          shift, and go to state 91
    L_BRACKET        shift, and go to state 92
    CHAR_LITERAL     shift, and go to state 93
    INTEGER_LITERAL  shift, and go to state 45
    REAL_LITERAL     shift, and go to state 94
    IDENTIFIER       shift, and go to state 8
    STRING_LITERAL   shift, and go to state 95

    variable                   go to state 96
    expression                 go to state 97
    additive_expression        go to state 98
    multiplicative_expression  go to state 99
    unary_expression           go to state 100
    primary_expression         go to state 101
    funcid                     go to state 102
    varid                      go to state 69
    identifier                 go to state 103
    unsigned_integer           go to state 104
    unsigned_real              go to state 105
    string_literal             go to state 106
    char_literal               go to state 107


State 58

  101 statement: WITH • record_variable_list DO statement

    IDENTIFIER  shift, and go to state 8

    variable              go to state 108
    record_variable_list  go to state 109
    varid                 go to state 69
    identifier            go to state 110


State 59

   95 statement: WHILE • expression DO statement

    NIL              shift, and go to state 87
    CHR              shift, and go to state 53
    NOT              shift, and go to state 88
    PLUS             shift, and go to state 89
    MINUS            shift, and go to state 90
    L_PAREN          shift, and go to state 91
    L_BRACKET        shift, and go to state 92
    CHAR_LITERAL     shift, and go to state 93
    INTEGER_LITERAL  shift, and go to state 45
    REAL_LITERAL     shift, and go to state 94
    IDENTIFIER       shift, and go to state 8
    STRING_LITERAL   shift, and go to state 95

    variable                   go to state 96
    expression                 go to state 111
    additive_expression        go to state 98
    multiplicative_expression  go to state 99
    unary_expression           go to state 100
    primary_expression         go to state 101
    funcid                     go to state 102
    varid                      go to state 69
    identifier                 go to state 103
    unsigned_integer           go to state 104
    unsigned_real              go to state 105
    string_literal             go to state 106
    char_literal               go to state 107


State 60

   97 statement: FOR • varid ASSIGN for_list DO statement

    IDENTIFIER  shift, and go to state 8

    varid       go to state 112
    identifier  go to state 110


State 61

   96 statement: REPEAT • statement_list UNTIL expression

    BEGIN_TOK        shift, and go to state 56
    IF               shift, and go to state 57
    WITH             shift, and go to state 58
    WHILE            shift, and go to state 59
    FOR              shift, and go to state 60
    REPEAT           shift, and go to state 61
    CASE             shift, and go to state 62
    GOTO             shift, and go to state 63
    READ             shift, and go to state 47
    WRITE            shift, and go to state 48
    READLN           shift, and go to state 49
    WRITELN          shift, and go to state 50
    INTEGER_LITERAL  shift, and go to state 45
    IDENTIFIER       shift, and go to state 8

    statement_list    go to state 113
    statement         go to state 65
    variable          go to state 66
    label             go to state 67
    procid            go to state 68
    varid             go to state 69
    identifier        go to state 70
    unsigned_integer  go to state 71


State 62

   93 statement: CASE • expression OF case_list END
   94          | CASE • expression OF case_list SEMICOLON case_else END

    NIL              shift, and go to state 87
    CHR              shift, and go to state 53
    NOT              shift, and go to state 88
    PLUS             shift, and go to state 89
    MINUS            shift, and go to state 90
    L_PAREN          shift, and go to state 91
    L_BRACKET        shift, and go to state 92
    CHAR_LITERAL     shift, and go to state 93
    INTEGER_LITERAL  shift, and go to state 45
    REAL_LITERAL     shift, and go to state 94
    IDENTIFIER       shift, and go to state 8
    STRING_LITERAL   shift, and go to state 95

    variable                   go to state 96
    expression                 go to state 114
    additive_expression        go to state 98
    multiplicative_expression  go to state 99
    unary_expression           go to state 100
    primary_expression         go to state 101
    funcid                     go to state 102
    varid                      go to state 69
    identifier                 go to state 103
    unsigned_integer           go to state 104
    unsigned_real              go to state 105
    string_literal             go to state 106
    char_literal               go to state 107


State 63

  100 statement: GOTO • label

    INTEGER_LITERAL  shift, and go to state 45

    label             go to state 115
    unsigned_integer  go to state 71


State 64

   16 block5: BEGIN_TOK statement_list • END
   86 statement_list: statement_list • SEMICOLON optional_statement

    END        shift, and go to state 116
    SEMICOLON  shift, and go to state 117


State 65

   85 statement_list: statement •

    $default  reduce using rule 85 (statement_list)


State 66

   89 statement: variable • ASSIGN expression
  104 variable: variable • L_BRACKET subscript_list R_BRACKET
  105         | variable • DOT fieldid
  106         | variable • CARET

    DOT        shift, and go to state 118
    CARET      shift, and go to state 119
    ASSIGN     shift, and go to state 120
    L_BRACKET  shift, and go to state 121


State 67

  102 statement: label • COLON statement

    COLON  shift, and go to state 122


State 68

   98 statement: procid •
   99          | procid • L_PAREN optional_expression_list R_PAREN

    L_PAREN  shift, and go to state 123

    $default  reduce using rule 98 (statement)


State 69

  103 variable: varid •

    $default  reduce using rule 103 (variable)


State 70

  172 procid: identifier •
  178 varid: identifier •

    DOT        reduce using rule 178 (varid)
    CARET      reduce using rule 178 (varid)
    ASSIGN     reduce using rule 178 (varid)
    L_BRACKET  reduce using rule 178 (varid)
    $default   reduce using rule 172 (procid)


State 71

  123 label: unsigned_integer •

    $default  reduce using rule 123 (label)


State 72

    1 pascal_program: PROGRAM IDENTIFIER program_headingopt SEMICOLON block DOT •

    $default  reduce using rule 1 (pascal_program)


State 73

    7 block: label_declaration SEMICOLON • block1

    VAR        shift, and go to state 14
    CONST      shift, and go to state 15
    TYPE       shift, and go to state 16
    PROCEDURE  shift, and go to state 18
    FUNCTION   shift, and go to state 19
    BEGIN_TOK  shift, and go to state 20

    block1                     go to state 124
    block2                     go to state 23
    block3                     go to state 24
    block4                     go to state 25
    block5                     go to state 26
    constant_declaration       go to state 28
    type_declaration           go to state 29
    variable_declaration       go to state 30
    proc_and_func_declaration  go to state 31
    proc_or_func               go to state 32


State 74

   18 label_declaration: label_declaration COMMA • unsigned_integer

    INTEGER_LITERAL  shift, and go to state 45

    unsigned_integer  go to state 125


State 75

    9 block1: constant_declaration SEMICOLON • block2
   20 constant_declaration: constant_declaration SEMICOLON • constid EQ constant

    VAR         shift, and go to state 14
    TYPE        shift, and go to state 16
    PROCEDURE   shift, and go to state 18
    FUNCTION    shift, and go to state 19
    BEGIN_TOK   shift, and go to state 20
    IDENTIFIER  shift, and go to state 8

    block2                     go to state 126
    block3                     go to state 24
    block4                     go to state 25
    block5                     go to state 26
    type_declaration           go to state 29
    variable_declaration       go to state 30
    proc_and_func_declaration  go to state 31
    proc_or_func               go to state 32
    constid                    go to state 127
    identifier                 go to state 37


State 76

   11 block2: type_declaration SEMICOLON • block3
   22 type_declaration: type_declaration SEMICOLON • typeid EQ type

    VAR         shift, and go to state 14
    PROCEDURE   shift, and go to state 18
    FUNCTION    shift, and go to state 19
    BEGIN_TOK   shift, and go to state 20
    INTEGER     shift, and go to state 38
    REAL        shift, and go to state 39
    BOOLEAN     shift, and go to state 40
    CHAR        shift, and go to state 41
    STRING      shift, and go to state 42
    IDENTIFIER  shift, and go to state 8

    block3                     go to state 128
    block4                     go to state 25
    block5                     go to state 26
    variable_declaration       go to state 30
    proc_and_func_declaration  go to state 31
    proc_or_func               go to state 32
    typeid                     go to state 129
    identifier                 go to state 44


State 77

   13 block3: variable_declaration SEMICOLON • block4
   24 variable_declaration: variable_declaration SEMICOLON • variableid_list COLON type

    PROCEDURE   shift, and go to state 18
    FUNCTION    shift, and go to state 19
    BEGIN_TOK   shift, and go to state 20
    IDENTIFIER  shift, and go to state 8

    block4                     go to state 130
    block5                     go to state 26
    variableid_list            go to state 131
    proc_and_func_declaration  go to state 31
    proc_or_func               go to state 32
    identifier                 go to state 35


State 78

   15 block4: proc_and_func_declaration SEMICOLON • block5
   71 proc_and_func_declaration: proc_and_func_declaration SEMICOLON • proc_or_func

    PROCEDURE  shift, and go to state 18
    FUNCTION   shift, and go to state 19
    BEGIN_TOK  shift, and go to state 20

    block5        go to state 132
    proc_or_func  go to state 133


State 79

   26 variableid_list: variableid_list COMMA • identifier

    IDENTIFIER  shift, and go to state 8

    identifier  go to state 134


State 80

   23 variable_declaration: VAR variableid_list COLON • type
